--- a/src/app/pages/vista/vista.component.html
+++ b/src/app/pages/vista/vista.component.html
@@ -12,6 +12,7 @@
         <div class="relative z-50">
           <app-navbar-dropdown></app-navbar-dropdown>
         </div>
+        <app-header-2></app-header-2>
         <div class="relative z-40">
           <app-carousel-owl-1></app-carousel-owl-1>
         </div>
