--- a/src/app/pages/vista/vista.component.html
+++ b/src/app/pages/vista/vista.component.html
@@ -14,7 +14,8 @@
         </div>
         <app-header-2></app-header-2>
         <div class="relative z-40">
-          <app-carousel-owl-1></app-carousel-owl-1>
+          <!-- <app-carousel-owl-1></app-carousel-owl-1> -->
+          <app-banner-contenido-1></app-banner-contenido-1>
         </div>
       </nav>
 
