--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,10 @@
 body {
   /* background-color: #c6d8e7; */
   background-color: #ecf0f1;
+  /* font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal; */
 }
 
 @layer components {
