modificando nombre fuente

--- a/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
+++ b/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
@@ -1,19 +1,19 @@
 <section
   class="bg-cover h-screen bg-center bg-no-repeat bg-[url('assets/images/banner.png')] bg-gray-700"
 >
-  <div class="px-40 max-w-[60%] text-left py-24 lg:py-56">
+  <div class="px-40 max-w-[50%] text-left py-24 lg:py-56">
     <h3
-      class="mb-4 text-4xl tracking-tight leading-none text-white md:text-4xl lg:text-5xl"
+      class="mb-4 text-4xl tracking-tight leading-none font-subtitulo text-white md:text-4xl lg:text-5xl"
     >
       SOLUCIONES LEGALES CON CRITERIO E INNOVACIÓN
     </h3>
     <h3
-      class="mb-4 text-xl tracking-tight leading-none text-white md:text-2xl lg:text-2xl"
+      class="mb-4 text-xl tracking-tight font-parrafo font-bold leading-none text-justify text-white md:text-2xl lg:text-2xl"
     >
-      It is a long established fact that a reader will be distracted by the
-      readable content of a page when looking at its layout. The point of using
-      Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-      as opposed to using
+      It is a long established fact that a reader will <br />be distracted by
+      the readable content of a page when looking at its layout. The point of
+      using Lorem Ipsum is that it has a more-or-less normal distribution of
+      letters, as opposed to using
     </h3>
   </div>
 </section>
