--- a/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
@@ -1,10 +1,12 @@
 <div class="mx-40 mx-auto px-4 my-10">
   <h2
-    class="text-5xl text-gray-700 font-semibold mb-4 font-cinzel border-b-8 inline border-yellow-400"
+    class="text-5xl text-gray-700 font-semibold mb-4 font-subtitulo border-b-8 inline border-yellow-400"
   >
     ¿Quiénes somos?
   </h2>
-  <p class="mb-2 font-montserrat font-black text-gray-800 text-2xl mt-10">
+  <p
+    class="mb-2 font-parrafo font-black text-gray-800 text-2xl mt-10 text-justify"
+  >
     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
     Lorem Ipsum has been the industry's standard dummy text ever since the
     1500s, when an unknown printer took a galley of type and scrambled it to
@@ -12,7 +14,9 @@
     the leap into electronic typesetting, remaining essentially unchanged. It
     was popularised in the 1960s with the release of Letraset sheets containing
   </p>
-  <p class="mb-2 font-montserrat font-black text-gray-800 text-2xl mt-10">
+  <p
+    class="mb-2 font-parrafo font-black text-gray-800 text-2xl mt-10 text-justify"
+  >
     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
     Lorem Ipsum has been the industry's standard dummy text ever since the
     1500s, when an unknown printer took a galley of type and scrambled it to
