--- a/src/app/layout/componentes/header-2/header-2.component.html
+++ b/src/app/layout/componentes/header-2/header-2.component.html
@@ -1,5 +1,5 @@
 <div
-  class="px-4 py-2 bg-white dark:bg-gray-700 md:flex md:items-center md:justify-center"
+  class="hidden sm:block px-4 py-2 bg-white dark:bg-gray-700 md:flex md:items-center md:justify-center"
 >
   <span
     class="hidden sm:inline text-sm text-gray-500 dark:text-gray-300 sm:text-center md:mx-3"
