--- a/src/app/layout/componentes/navbar-dropdown/navbar-dropdown.component.html
+++ b/src/app/layout/componentes/navbar-dropdown/navbar-dropdown.component.html
@@ -26,6 +26,7 @@
         />
       </svg>
     </button>
+    <img src="assets/images/logo.png" class="sm:hidden h-14 w-48" alt="" />
     <div class="hidden w-full md:block md:w-auto" id="navbar-dropdown">
       <ul
         class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
