--- a/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
+++ b/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
@@ -1,9 +1,9 @@
 <section
-  class="bg-cover h-screen bg-center bg-no-repeat bg-[url('assets/images/banner.png')] bg-gray-700"
+  class="bg-cover h-[400px] sm:h-screen bg-center bg-no-repeat bg-[url('assets/images/banner.png')] bg-gray-700"
 >
-  <div class="px-40 max-w-[50%] text-left py-24 lg:py-56">
+  <div class="px-10 max-w-[80%] md:max-w-[50%] text-left py-24 lg:py-56">
     <h3
-      class="mb-4 text-4xl tracking-tight leading-none font-subtitulo text-white md:text-4xl lg:text-5xl"
+      class="mb-4 text-xl sm:text-4xl tracking-tight leading-none font-subtitulo text-white md:text-4xl lg:text-5xl"
     >
       SOLUCIONES LEGALES CON CRITERIO E INNOVACIÓN
     </h3>
