--- a/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
@@ -1,11 +1,11 @@
-<div class="mx-40 mx-auto px-4 my-10">
+<div class="mx-10 sm:mx-40 mx-auto px-4 my-10">
   <h2
     class="text-5xl text-gray-700 font-semibold mb-4 font-subtitulo border-b-8 inline border-yellow-400"
   >
     ¿Quiénes somos?
   </h2>
   <p
-    class="mb-2 font-parrafo font-black text-gray-800 text-2xl mt-10 text-justify"
+    class="mb-2 font-parrafo font-black text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
   >
     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
     Lorem Ipsum has been the industry's standard dummy text ever since the
@@ -15,7 +15,7 @@
     was popularised in the 1960s with the release of Letraset sheets containing
   </p>
   <p
-    class="mb-2 font-parrafo font-black text-gray-800 text-2xl mt-10 text-justify"
+    class="mb-2 font-parrafo font-black text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
   >
     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
     Lorem Ipsum has been the industry's standard dummy text ever since the
