--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 
 body {
   /* background-color: #c6d8e7; */
-  background-color: #ecf0f1;
+  background-color: #fff;
   /* font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 100;
