--- a/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
@@ -2,7 +2,7 @@
   <h2
     class="text-5xl text-gray-700 font-semibold mb-4 font-subtitulo border-b-8 inline border-yellow-400"
   >
-    ¿Quiénes somos?
+    ¿QUIÉNES SOMOS?
   </h2>
   <p
     class="mb-2 font-parrafo font-black text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
