footer con logo

--- a/src/app/pages/vista/vista.component.html
+++ b/src/app/pages/vista/vista.component.html
@@ -25,6 +25,6 @@
     </div>
 
     <app-subscribe-1></app-subscribe-1>
-    <app-footer-1></app-footer-1>
+    <app-footer-logo></app-footer-logo>
   </body>
 </html>
