--- a/src/app/layout/componentes/card-info/card-info.component.html
+++ b/src/app/layout/componentes/card-info/card-info.component.html
@@ -1,61 +1,61 @@
 <!-- component -->
-<div class="flex items-center justify-center">
+<div class="flex items-center justify-center my-16">
   <div
-    class="relative flex w-full max-w-[100%] mb-10 flex-row rounded-xl bg-white bg-clip-border text-gray-700 shadow-md"
+    class="relative flex w-full max-w-[100%] mb-10 flex-row rounded-xl bg-white bg-clip-border text-gray-700"
   >
     <div
       class="hidden sm:inline-block relative m-0 w-2/5 shrink-0 overflow-hidden rounded-xl rounded-r-none bg-white bg-clip-border text-gray-700"
     >
-      <img
-        src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="image"
-        class="h-full w-full object-cover"
-      />
+      <img src="assets/images/imagen-card.png" alt="image" class="w-[90%]" />
     </div>
     <div class="p-10 sm:p-20">
       <img
-        src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        src="assets/images/imagen-card.png"
         alt="image"
         class="sm:hidden w-full rounded-md mb-5"
       />
       <h2
-        class="mb-2 block font-sans text-4xl font-semibold leading-snug tracking-normal text-blue-gray-600 antialiased"
+        class="mb-2 block font-sans text-4xl font-subtitulo font-semibold leading-snug tracking-normal text-blue-gray-600 antialiased"
       >
-        Una misión y visión empresarial con integridad profesional.
+        ENRIQUE FIGUEROA
       </h2>
-      <h3
-        class="block font-sans text-xl font-semibold leading-relaxed text-gray-500 antialiased"
-      >
-        Misión
-      </h3>
-      <p
-        class="mb-8 block font-sans text-xl font-normal leading-relaxed text-gray-500 antialiased"
-      >
-        Asesorar, capacitar y formar profesionales en analitica de datos
-        mediante el uso de software más requeridas del mercado
-      </p>
 
-      <h3
-        class="block font-sans text-xl font-semibold leading-relaxed text-gray-500 antialiased"
-      >
-        Visión
-      </h3>
       <p
         class="mb-8 block font-sans text-xl font-normal leading-relaxed text-gray-500 antialiased"
       >
-        Ser una empresa líder en capacitación y asesoría del mercado analítico y
-        transformación digital
+        Enrique Figueroa es socio líder del aréa de Litigios y Controversias,
+        cuenta con amplia experiencia profesional en el diseño de estrategias
+        procesales y en el patrocinio de empresas en procesos civiles,
+        contenciosos administrativos, comerciales, constitucionales, procesos de
+        familia, arbitrajes y en la recuperación de créditos y bienes muebles e
+        inmuebles.
       </p>
-
-      <h3
-        class="block font-sans text-xl font-semibold leading-relaxed text-gray-500 antialiased"
-      >
-        Valores
-      </h3>
       <p
         class="mb-8 block font-sans text-xl font-normal leading-relaxed text-gray-500 antialiased"
       >
-        Compromiso, enfoque, responsabilidad y confidencialidad
+        Abogado por la Universidad Nacional Mayor de San Marcos (UNMSM) y
+        Magíster en Administración y Gestión Pública por la Universidad Castilla
+        de la Mancha. Cuenta con estudios de especialización en Arbitraje
+        Internacional e Inversiones en la Universidad del Pacífico y en
+        Argumentación Jurídica en el Centro de Estudios Constitucionales del
+        Tribunal Constitucional
+      </p>
+      <p
+        class="mb-8 block font-sans text-xl font-normal leading-relaxed text-gray-500 antialiased"
+      >
+        Con anterioridad a su incorporación al Estudio, ha sido asociado senior
+        del área de litigios de Payet, Rey, Cauvi & Pérez Abogados y asociado de
+        la misma área en CMS Grau Abogados. También ha sido profesor adjunto del
+        curso de Derecho Procesal Civil en la Facultad de Derecho de la
+        Universidad de Piura (UDEP) y adjunto de docencia del curso de Derechos
+        Reales en la Facultad de Derecho de la UNMSM
+      </p>
+      <p
+        class="mb-8 block font-sans text-xl font-normal leading-relaxed text-gray-500 antialiased"
+      >
+        Ha asesorado al entidades bancarias, mineras, centros comerciales,
+        compañías de telecomunicación, inmobiliarias, agroindustrias, entre
+        otras empresas.
       </p>
     </div>
   </div>
