--- a/src/app/pages/vista/inicio/inicio.component.html
+++ b/src/app/pages/vista/inicio/inicio.component.html
@@ -1,6 +1,8 @@
 <app-subtitulo-parrafo-1></app-subtitulo-parrafo-1>
 <app-feature-2></app-feature-2> <app-services-2></app-services-2>
 <app-banner-contenido-2></app-banner-contenido-2>
+<app-subtitulo-parrafo-2></app-subtitulo-parrafo-2>
+<app-card-info></app-card-info>
 
 <!-- <app-jumbotron-1></app-jumbotron-1> <app-card-info></app-card-info>
 <app-carousel-owl-2></app-carousel-owl-2> <app-services-1></app-services-1> -->
