carousel nuestros equipo

--- a/src/app/layout/componentes/card-info/card-info.component.html
+++ b/src/app/layout/componentes/card-info/card-info.component.html
@@ -1,5 +1,5 @@
 <!-- component -->
-<div class="flex items-center justify-center my-16">
+<div class="flex items-center justify-center mt-16">
   <div
     class="relative flex w-full max-w-[100%] mb-10 flex-row rounded-xl bg-white bg-clip-border text-gray-700"
   >
