avance seccion form

--- a/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
+++ b/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
@@ -15,11 +15,11 @@
             <div
               class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
             >
-              <div class="flex min-h-full flex-col items-center justify-center">
+              <!--   <div class="flex min-h-full flex-col items-center justify-center">
                 <h1 class="text-3xl font-bold">LOOKER STUDIO</h1>
                 <div class="text-lg">CURSO</div>
                 <div class="text-base">Ver mas ...</div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -42,11 +42,11 @@
             <div
               class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
             >
-              <div class="flex min-h-full flex-col items-center justify-center">
+              <!--  <div class="flex min-h-full flex-col items-center justify-center">
                 <h1 class="text-3xl font-bold">POWER BI</h1>
                 <div class="text-lg">CURSO</div>
                 <div class="text-base">Ver mas ...</div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -69,11 +69,11 @@
             <div
               class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
             >
-              <div class="flex min-h-full flex-col items-center justify-center">
+              <!--  <div class="flex min-h-full flex-col items-center justify-center">
                 <h1 class="text-3xl font-bold">ANALÍTICA DE DATOS</h1>
                 <div class="text-lg">CURSO</div>
                 <div class="text-base">Ver mas ...</div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -96,11 +96,11 @@
             <div
               class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
             >
-              <div class="flex min-h-full flex-col items-center justify-center">
+              <!--  <div class="flex min-h-full flex-col items-center justify-center">
                 <h1 class="text-3xl font-bold">LOOKER STUDIO</h1>
                 <div class="text-lg">CURSO</div>
                 <div class="text-base">Ver mas ...</div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
