--- a/src/app/layout/componentes/background-animated/background-animated.component.css
+++ b/src/app/layout/componentes/background-animated/background-animated.component.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -9,4 +9,4 @@
   .animation-delay-4000 {
     animation-delay: 4s;
   }
-}
+} */
