--- a/src/app/layout/componentes/header-2/header-2.component.html
+++ b/src/app/layout/componentes/header-2/header-2.component.html
@@ -17,7 +17,7 @@
     {{ horario }}
   </span>
 
-  <div
+  <!-- <div
     class="flex mt-4 sm:justify-center md:mt-0 space-x-5 rtl:space-x-reverse"
   >
     <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
@@ -82,5 +82,5 @@
       </svg>
       <span class="sr-only">GitHub account</span>
     </a>
-  </div>
+  </div> -->
 </div>
