--- a/src/app/layout/componentes/services-2/services-2.component.html
+++ b/src/app/layout/componentes/services-2/services-2.component.html
@@ -9,21 +9,7 @@
 <div class="grid grid-cols-1 md:grid-cols-3 my-10">
   <div class="p-8 text-center">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-1.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -34,21 +20,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-2.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -59,21 +31,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-3.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -87,21 +45,7 @@
 <div class="grid grid-cols-1 md:grid-cols-3 my-10">
   <div class="p-8 text-center">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-4.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -112,21 +56,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-5.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -137,21 +67,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-6.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -165,21 +81,7 @@
 <div class="grid grid-cols-1 md:grid-cols-3 my-10">
   <div class="p-8 text-center">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-7.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -190,21 +92,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-8.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -215,21 +103,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-9.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -243,21 +117,7 @@
 <div class="grid grid-cols-1 md:grid-cols-3 my-10">
   <div class="p-8 text-center">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-10.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -268,21 +128,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-11.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
@@ -293,21 +139,7 @@
   </div>
   <div class="p-8 text-center sm:border-l sm:border-gray-700">
     <div class="text-[100px] flex justify-center items-center font-titulo">
-      <svg
-        class="w-16 h-16 text-gray-800 dark:text-white"
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-      >
-        <path
-          stroke="currentColor"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M8 7H5a2 2 0 0 0-2 2v4m5-6h8M8 7V5c0-1.1.9-2 2-2h4a2 2 0 0 1 2 2v2m0 0h3a2 2 0 0 1 2 2v4m0 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-6m18 0s-4 2-9 2-9-2-9-2m9-2h0"
-        />
-      </svg>
+      <img src="assets/images/icons/icon-12.png" class="w-16 h-16" alt="" />
     </div>
     <h2 class="uppercase text-gray-700 text-lg font-medium mb-3">Tributario</h2>
     <p class="font-light text-base text-gray-500 mb-3">
