modificando logo y tipografia

--- a/src/app/layout/componentes/banner-contenido-2/banner-contenido-2.component.html
+++ b/src/app/layout/componentes/banner-contenido-2/banner-contenido-2.component.html
@@ -8,7 +8,7 @@
       CONTÁCTE CON NOSOTROS
     </h3>
     <h3
-      class="mb-4 text-xl font-parrafo font-bold text-justify text-white md:text-2xl lg:text-2xl"
+      class="mb-4 text-xl font-parrafo text-justify text-white md:text-2xl lg:text-2xl"
     >
       Contáctanos y nos comunicaremos contigo a la brevedad para absolver todas
       tus dudas. Estamos para asesorarte.
