--- a/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-1/subtitulo-parrafo-1.component.html
@@ -5,7 +5,7 @@
     ¿QUIÉNES SOMOS?
   </h2>
   <p
-    class="mb-2 font-parrafo font-black text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
+    class="mb-2 font-parrafo text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
   >
     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
     Lorem Ipsum has been the industry's standard dummy text ever since the
@@ -15,7 +15,7 @@
     was popularised in the 1960s with the release of Letraset sheets containing
   </p>
   <p
-    class="mb-2 font-parrafo font-black text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
+    class="mb-2 font-parrafo text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
   >
     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
     Lorem Ipsum has been the industry's standard dummy text ever since the
