--- a/src/app/layout/componentes/subtitulo-parrafo-2/subtitulo-parrafo-2.component.html
+++ b/src/app/layout/componentes/subtitulo-parrafo-2/subtitulo-parrafo-2.component.html
@@ -5,7 +5,7 @@
     NUESTROS EQUIPO
   </h2>
   <p
-    class="mb-2 font-parrafo font-black text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
+    class="mb-2 font-parrafo text-gray-800 text-lg sm:text-2xl mt-10 text-justify"
   >
     It is a long established fact that a reader will be distracted by the
     readable content of a page when looking at its layout. The point of using
