--- a/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
+++ b/src/app/layout/componentes/banner-contenido-1/banner-contenido-1.component.html
@@ -1,5 +1,5 @@
 <section
-  class="bg-cover h-[400px] sm:h-screen bg-center bg-no-repeat bg-[url('assets/images/banner.png')] bg-gray-700"
+  class="bg-cover h-[400px] sm:h-screen bg-center bg-no-repeat bg-[url('assets/images/banner.jpg')] bg-gray-700"
 >
   <div class="px-10 max-w-[80%] md:max-w-[50%] text-left py-24 lg:py-56">
     <h3
@@ -8,7 +8,7 @@
       SOLUCIONES LEGALES CON CRITERIO E INNOVACIÓN
     </h3>
     <h3
-      class="mb-4 text-xl tracking-tight font-parrafo font-bold leading-none text-justify text-white md:text-2xl lg:text-2xl"
+      class="mb-4 text-xl tracking-tight font-parrafo leading-none text-justify text-white md:text-2xl lg:text-2xl"
     >
       It is a long established fact that a reader will <br />be distracted by
       the readable content of a page when looking at its layout. The point of
