--- a/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
+++ b/src/app/layout/componentes/carousel-owl-2/carousel-owl-2.component.html
@@ -4,7 +4,7 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]"
+            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
@@ -12,15 +12,6 @@
                 src="assets/images/socio_1.png"
               />
             </div>
-            <div
-              class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
-            >
-              <!--   <div class="flex min-h-full flex-col items-center justify-center">
-                <h1 class="text-3xl font-bold">LOOKER STUDIO</h1>
-                <div class="text-lg">CURSO</div>
-                <div class="text-base">Ver mas ...</div>
-              </div> -->
-            </div>
           </div>
         </div>
       </div>
@@ -31,7 +22,7 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]"
+            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
@@ -39,15 +30,6 @@
                 src="assets/images/socio_2.png"
               />
             </div>
-            <div
-              class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
-            >
-              <!--  <div class="flex min-h-full flex-col items-center justify-center">
-                <h1 class="text-3xl font-bold">POWER BI</h1>
-                <div class="text-lg">CURSO</div>
-                <div class="text-base">Ver mas ...</div>
-              </div> -->
-            </div>
           </div>
         </div>
       </div>
@@ -58,22 +40,13 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]"
+            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
                 class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
                 src="assets/images/socio_3.png"
               />
-            </div>
-            <div
-              class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
-            >
-              <!--  <div class="flex min-h-full flex-col items-center justify-center">
-                <h1 class="text-3xl font-bold">ANALÍTICA DE DATOS</h1>
-                <div class="text-lg">CURSO</div>
-                <div class="text-base">Ver mas ...</div>
-              </div> -->
             </div>
           </div>
         </div>
@@ -85,22 +58,13 @@
       <div class="flex flex-col justify-center bg-slate-100">
         <div class="group h-96 w-full [perspective:1000px]">
           <div
-            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500 [transform-style:preserve-3d] group-hover:[transform:rotateY(180deg)]"
+            class="relative h-full w-full rounded-xl shadow-xl transition-all duration-500"
           >
             <div class="absolute inset-0">
               <img
                 class="h-full w-full rounded-xl object-cover shadow-xl shadow-black/40"
                 src="assets/images/socio_4.png"
               />
-            </div>
-            <div
-              class="absolute inset-0 h-full w-full rounded-xl bg-black/70 px-12 text-center text-slate-200 [transform:rotateY(180deg)] [backface-visibility:hidden]"
-            >
-              <!--  <div class="flex min-h-full flex-col items-center justify-center">
-                <h1 class="text-3xl font-bold">LOOKER STUDIO</h1>
-                <div class="text-lg">CURSO</div>
-                <div class="text-base">Ver mas ...</div>
-              </div> -->
             </div>
           </div>
         </div>
