--- a/src/app/layout/componentes/header-2/header-2.component.html
+++ b/src/app/layout/componentes/header-2/header-2.component.html
@@ -1,21 +1,40 @@
 <div
   class="hidden sm:block px-4 py-2 bg-white dark:bg-gray-700 md:flex md:items-center md:justify-center"
 >
+  <img src="assets/images/globo-mapa.png" class="w-4 hidden md:block" alt="" />
   <span
     class="hidden sm:inline text-sm text-gray-500 dark:text-gray-300 sm:text-center md:mx-3"
   >
     {{ direccion }}
   </span>
+  <img src="assets/images/telefono.png" class="w-4 hidden md:block" alt="" />
   <span
     class="hidden sm:inline text-sm text-gray-500 dark:text-gray-300 sm:text-center md:mx-3"
   >
     {{ telefono }}
   </span>
+  <img src="assets/images/calendario.png" class="w-4 hidden md:block" alt="" />
   <span
     class="hidden sm:inline text-sm text-gray-500 dark:text-gray-300 sm:text-center md:mx-3"
   >
     {{ horario }}
   </span>
+  <img
+    src="assets/images/linkedin.png"
+    class="w-4 hidden md:block pl-1"
+    alt=""
+  />
+  <img
+    src="assets/images/youtube.png"
+    class="w-4 hidden md:block pl-1"
+    alt=""
+  />
+  <img
+    src="assets/images/whatsapp.png"
+    class="w-4 hidden md:block pl-1"
+    alt=""
+  />
+  <img src="assets/images/x.png" class="w-4 hidden md:block pl-1" alt="" />
 
   <!-- <div
     class="flex mt-4 sm:justify-center md:mt-0 space-x-5 rtl:space-x-reverse"
