--- a/src/app/layout/componentes/navbar-dropdown/navbar-dropdown.component.html
+++ b/src/app/layout/componentes/navbar-dropdown/navbar-dropdown.component.html
@@ -1,6 +1,6 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
   <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-center mx-auto p-4"
+    class="max-w-screen-xl flex flex-wrap items-center justify-center mx-auto p-2"
   >
     <button
       data-collapse-toggle="navbar-dropdown"
@@ -27,11 +27,14 @@
       </svg>
     </button>
     <img src="assets/images/logo.png" class="sm:hidden h-14 w-48" alt="" />
-    <div class="hidden w-full md:block md:w-auto" id="navbar-dropdown">
+    <div
+      class="hidden w-full md:block md:w-auto border-b border-gray-900"
+      id="navbar-dropdown"
+    >
       <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+        class="flex flex-col font-medium p-4 md:p-0 mt-4 text-2xl border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
       >
-        <li>
+        <li class="border-r border-gray-900 px-10 pb-4 pt-2">
           <a
             href="#"
             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
@@ -40,7 +43,7 @@
             <img src="assets/images/icons/lupa.png" class="w-5 h-5" alt="" />
           </a>
         </li>
-        <li>
+        <li class="px-2 pb-4 pt-2">
           <a
             href="#"
             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
@@ -49,7 +52,7 @@
           >
         </li>
 
-        <li>
+        <li class="px-2 pb-4 pt-2">
           <button
             id="dropdownNavbarLink1"
             data-dropdown-toggle="dropdownNavbar1"
@@ -98,7 +101,7 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="px-2 pb-4 pt-2">
           <button
             id="dropdownNavbarLink2"
             data-dropdown-toggle="dropdownNavbar2"
@@ -147,7 +150,7 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="px-2 pb-4 pt-2">
           <button
             id="dropdownNavbarLink3"
             data-dropdown-toggle="dropdownNavbar3"
@@ -196,7 +199,7 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="border-r border-gray-900 pr-10 pb-4 pt-2">
           <button
             id="dropdownNavbarLink4"
             data-dropdown-toggle="dropdownNavbar4"
@@ -245,7 +248,7 @@
             </ul>
           </div>
         </li>
-        <li>
+        <li class="pr-5 pb-2 pt-2">
           <button
             id="dropdownNavbarLink5"
             data-dropdown-toggle="dropdownNavbar5"
